# sitcom-ml-project

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  requirements.txt
.cursor/rules/: data_spec.mdc  orchestrator.mdc  project_admin.mdc  project_context.mdc  roadmap.mdc  scraping_rules.mdc  storage_rules.mdc
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_episode_source_document.py  003_wiki_only_series_tmdb_nullable.py
backend/db/: __init__.py  character_repo.py  models.py  repositories.py  session.py
backend/ingestion/: __init__.py  wiki_sqlite.py
backend/pipeline/: __init__.py  __main__.py  graph.py
backend/retrieval/: __init__.py  embedding_text.py
backend/scraping/: __init__.py  episode_ref.py  extracted_data.py  http_client.py  runner.py
backend/scraping/providers/: __init__.py  wiki_fandom.py
docs/: PROJECT_LOG.md
